<!DOCTYPE resources [
    <!ENTITY home "Home location">
    ]>
<resources>
    <string name="app_name">AurorAlert Finland</string>

    <!-- fragment cloud -->
    <string name="cloud_cover">Cloud cover forecast: </string>
    <string name="cloud_cover_loc">Cloud cover forecast (%1s/%2s): </string>
    <string name="cloud_cover_val">%1$.1f%%</string>

    <!-- fragment geolocation -->
    <string name="loc_time">Your location or from preferences (last updated at %1s)</string>
    <string name="loc_lat_lon">Latitude: %1$.2f, Longitude: %2$.2f</string>

    <!-- fragment sunrise/set -->
    <string name="dark_sun"         >Sunrise at           %1s and sunset at %2s</string>
    <string name="dark_civil"       >Civil dusk at        %1s and dawn at   %2s</string>
    <string name="dark_nautical"    >Nautical dusk at     %1s and dawn at   %2s</string>
    <string name="dark_astronomical">Astronomical dusk at %1s and dawn at   %2s</string>

    <!-- fragment Geophysical observatory activity -->
    <string name="geo_sites">List of Geophysical Observatories with probability for next hour: </string>
    <string name="geo_last_update">Issued at %s</string>
    <string name="geo_name">%1s (%2s):</string>
    <string name="geo_level">rx: %1d, %2s</string>
    <string name="geo_latlon">(%1$.2f, %2$.2f)</string>

    <!-- TODO: parse them dynamically from
    http://aurorasnow.fmi.fi/public_service/magforecast_en.html -->
    <!-- IMPORTANT: keep the same order for level and level_color :D -->
    <string-array name="geo_level">
        <item>low</item>
        <item>increased</item>
        <item>moderate</item>
        <item>high</item>
        <item>very high</item>
    </string-array>
    <string-array name="geo_level_color">
        <item>#00FF00</item>
        <item>#FFFF00</item>
        <item>#FFA500</item>
        <item>#FF0000</item>
        <item>#800000</item>
    </string-array>

    <!-- Preferences -->
    <string name="pref_cloud_night">Cloudiness and darkness</string>
    <string name="pref_cloud_title">Cloud cover</string>
    <string name="pref_cloud_desc">Amount in % of cloud cover. The less cloudy, the better.
        If 100%, the app will not check for cloud cover.</string>
    <integer name="pref_cloud_def">50</integer>

    <string name="pref_loc">Geolocation</string>
    <string name="pref_loc_desc">Geolocation is used to calculate sunrise/sunset (darkness), check
        local weather forecast (cloud cover) and to get the next hour geophysical activity from the
        nearest observatory</string>
    <string name="pref_loc_on">Enable geolocation</string>
    <string name="pref_loc_on_desc">If you spend 90% of your evenings/nights at home or nearby 10km,
        save phone resources (and define your &home;).</string>
    <string name="pref_loc_int">Refresh interval</string>
    <string name="pref_loc_home">Home location</string>
    <string name="pref_loc_lat">&home; Latitude</string>
    <string name="pref_loc_lon">&home; Longitude</string>
    <string name="pref_loc_lat_def">60.17</string>
    <string name="pref_loc_lon_def">24.95</string>
    <string name="pref_dark">Darkness level</string>
    <string name="pref_dark_desc">During daylight, you need special ultraviolet (UV) filter to "measure" aurora. During civil and nautical twilight you need special equipment. Near the nautical dawn/dusk, during astronomical twilight and during the dark night you can enjoy auroras with your own eyes.</string>
    <!-- IMPORTANT: keep the same order for darkness names and values -->
    <string-array name="pref_dark_name">
        <item>Daylight</item>
        <item>Sunset/rise</item>
        <item>Civil dawn/dusk</item>
        <item>Nautical dawn/dusk</item>
        <item>Astronomical dawn/dusk</item>
    </string-array>
    <string-array name="pref_dark_val">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <!-- menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
</resources>
